[package]
name = "dp"
version = "0.1.0"
authors = ["shimo8810 <shimo.8810@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
itertools = "0.10.3"
num = "0.4.0"
petgraph = "0.6.0"
proconio = { version = "0.4.3", features = ["derive"] }

[profile.release]
lto = true
panic = 'abort'
